--- a/css/main.css
+++ b/css/main.css
@@ -128,17 +128,25 @@ li {
 
 .mMain {
     background: #6e6e6e;
+    background: rgb(44, 52, 63);
     height: 100vm;
     text-align: center;
+    color: rgba(255, 255, 255, 0.918);
 }
 
 .mImage{
     width: 100%;
 }
 
+.menziesOl{
+    padding-top: 25px;
+    padding-right: 25px;
+}
+
 .liText1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* font-weight: bold; */
+    padding-top: 25px;
     font-size: 30px;
 }
 .liText2 {
